--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @course do |f| %>
   <%= f.error_notification %>
-  <% theme_code = @current_user.nil? ? "a" : @current_user.theme.code 
-     anonymize = @current_user.anonymize? %>
+  <% theme_code = get_theme_code
+     anonymize = get_anonymous %>
   <div data-role="tabs" id="tabs">
     <div data-role="navbar">
       <ul>
@@ -124,9 +124,9 @@
                 </td>
                 <td>
                   <div hidden>
-                    <%= l activity.end_date.in_time_zone( @current_user.timezone ), format: :datestamp %>
+                    <%= l in_tz( date: activity.end_date ), format: :datestamp %>
                   </div>
-                  <%= l activity.end_date.in_time_zone( @current_user.timezone ), format: :tz_clarity %>
+                  <%= l in_tz( date: activity.end_date ), format: :tz_clarity %>
                 </td>
                 <td><%= link_to t( :show ), activity %>&nbsp;|&nbsp;
                 <%= link_to t( :edit ), [:edit, activity] %>&nbsp;|&nbsp;
