--- a/app/views/installments/slider_basic.html.erb
+++ b/app/views/installments/slider_basic.html.erb
@@ -1,6 +1,6 @@
 <h2><%= t 'installments.subtitle' %></h2>
-<% theme_code = @current_user.nil? ? "a" : @current_user.theme.code %>
-<% anonymize = false %>
+<% theme_code = get_theme_code
+   anonymize = false %>
 <% if flash[:notice] %>
   <p class="notice"><%= flash[:notice] %></p>
 <% end %>
