--- a/app/views/layouts/graphing.html.erb
+++ b/app/views/layouts/graphing.html.erb
@@ -1,3 +1,4 @@
+<% theme_code = get_theme_code %>
 <!DOCTYPE html>
 <html>
   <%= favicon_link_tag %>
@@ -38,7 +39,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <div data-role="page" data-theme="<%= @current_user.nil? ? "a" : @current_user.theme.code %>">
+    <div data-role="page" data-theme="<%= theme_code %>">
       <div data-role="header" data-position="fixed" style="overflow:hidden;" >
         <h1 id="title_head"><%= t :title %> <%= " : " + @title unless @title.nil? %></h1>
         <p style="font-weight:300;font-size:10px;text-align:center"><% q = Quote.get_quote %><%= raw( q.get_local_quote) %>
