--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
-<% theme_code = @current_user.nil? ? "a" : @current_user.theme.code 
-   anonymize = @current_user.anonymize? %>
+<% theme_code = get_theme_code
+   anonymize = get_anonymous %>
 <div data-role="tabs" id="tabs">
   <div data-role="navbar">
     <ul>
@@ -25,8 +25,8 @@
     <p>
       <h3><%= t :dates %>:</h3>
       <%= raw t( 'projects.edit.date_summ',
-            start_date: @project.start_date,
-            end_date: @project.end_date,
+            start_date: in_tz( date: @project.start_date ),
+            end_date: in_tz( date: @project.end_date ),
             start_dow: ( Date::DAYNAMES.at @project.start_dow ),
             end_dow: ( Date::DAYNAMES.at @project.end_dow ) ) %><br>
       <em><%= t :note %>: <%= t 'projects.tz_warn', time_zone: @project.course.timezone %></em></br>
