working on getting my tests to run properly

--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @experience do |f| %>
   <%= f.error_notification %>
-  <% theme_code = gt_theme_code
+  <% theme_code = get_theme_code
      anonymize = get_anonymous %>
   <div data-role="tabs" id="tabs">
     <div data-role="navbar">
