--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -17,8 +17,11 @@
         <%= f.input :number %>
         <%= f.association :school %>
         <%= f.time_zone_select :timezone %>
-        <%= f.input :start_date, as: :date, html5: true %>
-        <%= f.input :end_date, as: :date, html5: true %>
+        <s course_tz = ActiveSupport::TimeZone.new( f.object.timezone ) %>
+        <%= f.input :start_date, as: :date, html5: true,
+          input_html: { value: f.object.start_date + course_tz.utc_offset} %>
+        <%= f.input :end_date, as: :date, html5: true,
+          input_html: { value: f.object.end_date + course_tz.utc_offset } %>
         <%= f.input :description, as: :text %>
       </div>
     </div>
