--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -21,11 +21,14 @@
     <table width="100%">
       <tr>
         <td width="45%">
-          <%= f.input :start_date, as: :date, html5: true, label: "Project start date" %>
+          <% ctz = f.object.course.timezone %>
+          <%= f.input :start_date, as: :date, html5: true, label: t('projects.start_date_lbl'),
+            input_html: { value: in_tz( date: f.object.end_date, tz_str: ctz )} %>
         </td>
         <td width="10%" align="center" valign="center">&nbsp;</td>
         <td width="45%">
-          <%= f.input :end_date, as: :date, html5: true, label: "Project end date" %>
+          <%= f.input :end_date, as: :date, html5: true, label: t('projects.end_date_bl'),
+            input_html: { value: in_tz( date: f.object.end_date, tz_str: ctz )} %>
         </td>
       </tr>
       <tr>
