--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -23,7 +23,8 @@
         <td width="45%">
           <% ctz = f.object.course.timezone %>
           <%= f.input :start_date, as: :date, html5: true, label: t('projects.start_date_lbl'),
-            input_html: { value: convert_to_tz( date: f.object.end_date, tz_str: ctz )} %>
+            input_html: { value: convert_to_tz( date:
+            f.object.start_date, tz_str: ctz )} %>
         </td>
         <td width="10%" align="center" valign="center">&nbsp;</td>
         <td width="45%">
