--- a/app/views/shared/_consent.erb
+++ b/app/views/shared/_consent.erb
@@ -1,5 +1,5 @@
 <% if( project.is_for_research? ) %>
-  <%= link_to "Research Consent Form",
+  <%= link_to t( 'consent_forms.consent_form' ),
     :controller => "consent_logs", :action => "edit",
     :consent_form_id => project.consent_form.id %>
 <% else %>
