Adding Google Analytics

--- a/app/views/layouts/experiences.html.erb
+++ b/app/views/layouts/experiences.html.erb
@@ -3,6 +3,7 @@
 <html>
   <%= favicon_link_tag %>
   <head>
+    <%= render 'layouts/shared/google_analytics' %>
     <title><%= t :title %> I like eggs<%= " : " + @title unless @title.nil? %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag    "application", :media => "all" %>
