--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -22,12 +22,12 @@
         <td width="45%">
           <% ctz = f.object.course.timezone %>
           <%= f.input :start_date, as: :date, html5: true, label: t( 'experiences.start_date_lbl' ),
-            input_html: { value: convert_to_tz( date: f.object.start_date, tz_str: ctz )} %>
+            input_html: { value: to_tz( date: f.object.start_date, tz_str: ctz )} %>
         </td>
         <td width="10%" align="center" valign="center">&nbsp;</td>
         <td width="45%">
           <%= f.input :end_date, as: :date, html5: true, label: t('experiences.end_date_bl'),
-            input_html: { value: convert_to_tz( date: f.object.end_date, tz_str: ctz )} %>
+            input_html: { value: to_tz( date: f.object.end_date, tz_str: ctz )} %>
         </td>
       </tr>
       <tr>
