--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -40,7 +40,7 @@
     
   
   <table width="90%" data-role="table"
-          id="basicTable"
+          id="responsesTable"
           data-column-btn-theme"<%= theme_code %>" 
           data-column-popup-theme="<%= theme_code %>" 
           data-mode="columntoggle"
