Posting descripts as raw html

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -25,7 +25,7 @@
 
 <p>
   <h3><%= t :description %>:</h3>
-  <%= @course.description %>
+  <%= raw( @course.description ) %>
 </p>
 <p>
   <h3><%= t :dates %>:</h3>
