--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -32,8 +32,18 @@
         <td><%= course.get_number( anonymize ) %></td>
         <td><%= link_to course.get_name( anonymize ), course %></td>
         <td><%= course.school.get_name( anonymize ) %></td>
-        <td><%= l in_tz( date: course.start_date, tz_str: course.timezone ), format: :tz_clarity %></td>
-        <td><%= l in_tz( date: course.end_date, tz_str: course.timezone ), format: :tz_clarity %></td>
+        <td>
+          <div hidden>
+            <%= l in_tz( date: course.start_date ), format: :datestamp %>
+          </div>
+          <%= l in_tz( date: course.start_date, tz_str: course.timezone ), format: :tz_clarity %>
+        </td>
+        <td>
+          <div hidden>
+            <%= l in_tz( date: course.end_date ), format: :datestamp %>
+          </div>
+          <%= l in_tz( date: course.end_date, tz_str: course.timezone ), format: :tz_clarity %>
+        </td>
         <td><%= course.rosters.instructor.count %></td>
         <td><%= course.rosters.students.count %></td>
         <td><%= course.projects.count %></td>
