--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -166,7 +166,7 @@
                 </td>
                 <td>
                   <div hidden>
-                    <%= l in_tz( date: activity.start_date ), format: :datestamp %>
+                    <%= l in_tz( date: activity.end_date ), format: :datestamp %>
                   </div>
                   <%= l in_tz( date: activity.end_date ), format: :tz_clarity %>
                 </td>
