--- a/app/views/bingo_games/index.html.erb
+++ b/app/views/bingo_games/index.html.erb
@@ -24,8 +24,18 @@
       <tr>
         <td><%= link_to bingo_game.get_name( anonymize ), bingo_game %></td>
         <td><%= bingo_game.course.get_name( anonymize ) %></td>
-        <td><%= l in_tz( date: bingo_game.start_date ), format: :tz_clarity %></td>
-        <td><%= l in_tz( date: bingo_game.end_date ), format: :tz_clarity %></td>
+        <td>
+          <div hidden>
+            <%= l in_tz( date: bingo_game.start_date ), format: :datestamp %>
+          </div>
+          <%= l in_tz( date: bingo_game.start_date ), format: :tz_clarity %>
+        </td>
+        <td>
+          <div hidden>
+            <%= l in_tz( date: bingo_game.end_date ), format: :datestamp %>
+          </div>
+          <%= l in_tz( date: bingo_game.end_date ), format: :tz_clarity %>
+        </td>
         <td><%= bingo_game.active %></td>
         <td><%= link_to t( :show ), bingo_game %>&nbsp;|&nbsp;
         <%= link_to t( :edit ), edit_bingo_game_path(bingo_game) %>&nbsp;|&nbsp;
