--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -24,8 +24,18 @@
       <tr>
         <td><%= link_to experience.get_name( anonymize ), experience %></td>
         <td><%= experience.course.get_name( anonymize ) %></td>
-        <td><%= l in_tz( date: experience.start_date ), format: :tz_clarity %></td>
-        <td><%= l in_tz( date: experience.end_date ), format: :tz_clarity %></td>
+        <td>
+          <div hidden>
+            <%= l in_tz( date: experience.start_date ), format: :datestamp %>
+          </div>
+          <%= l in_tz( date: experience.start_date ), format: :tz_clarity %>
+        </td>
+        <td>
+          <div hidden>
+            <%= l in_tz( date: experience.end_date ), format: :datestamp %>
+          </div>
+          <%= l in_tz( date: experience.end_date ), format: :tz_clarity %>
+        </td>
         <td><%= experience.active %></td>
         <td><%= link_to( t(:show), experience_path( experience )) %>&nbsp;|&nbsp;
         <%= link_to t(:edit), edit_experience_path(experience) %>&nbsp;|&nbsp;
