--- a/app/views/shared/_admin_menu.html.erb
+++ b/app/views/shared/_admin_menu.html.erb
@@ -13,7 +13,7 @@
       <%= link_to t( :bingo_games_edit ), bingo_games_path %>
     </li>
     <li>
-      <%= link_to t( :schools_edit ), schools_path %>
+      <%= link_to t( :schools_edit ), schools_path if @current_user.is_admin? %>
     </li>
   </ul>
 </div>
